--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
-<body class="bg-gray-100 dark:bg-gray-900 transition duration-500 ease-in-out">
+<body class="bg-slate-200 dark:bg-slate-900 transition duration-500 ease-in-out">
   <app-root></app-root>
 </body>
 
