--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>MeetupVote</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
 </head>
 
 <body class="bg-slate-200 dark:bg-slate-900 transition duration-500 ease-in-out">
